--- a/package.json
+++ b/package.json
@@ -2,16 +2,24 @@
   "name": "@trackasia/polyline",
   "version": "1.0.0",
   "description": "A utility for encoding and decoding Google Polylines.",
-  "type": "module",
-  "main": "index.js",
+  "homepage": "https://github.com/track-asia/polyline",
   "repository": {
     "type": "git",
-    "url": "https://github.com/track-asia/polyline.git"
+    "url": "git+https://github.com/track-asia/polyline.git"
   },
   "bugs": {
     "url": "https://github.com/track-asia/polyline/issues"
   },
-  "homepage": "https://github.com/track-asia/polyline#readme",
+  "main": "index.js",
+  "module": "index.js",
+  "browser": "index.js",
+  "exports": {
+    ".": {
+      "require": "./index.js",
+      "import": "./index.js",
+      "browser": "./index.js"
+    }
+  },
   "scripts": {
     "test": "mocha test/test.js"
   },
@@ -24,15 +32,6 @@
   ],
   "author": "TrackAsia",
   "license": "MIT",
-  "module": "index.mjs",
-  "browser": "index.browser.js",
-  "exports": {
-    ".": {
-      "require": "./index.js",
-      "import": "./index.mjs",
-      "browser": "./index.browser.js"
-    }
-  },
   "directories": {
     "test": "test"
   },
